--- a/app/bin/main/scale_legends/Leaderboard.fxml
+++ b/app/bin/main/scale_legends/Leaderboard.fxml
@@ -9,16 +9,16 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="574.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scale_legends.SceneController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="574.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scale_legends.LeaderboardSceneController">
    <children>
-      <Button fx:id="btnMainFromLeaderboard" layoutX="217.0" layoutY="361.0" mnemonicParsing="false" onAction="#switchToMainScene" prefHeight="25.0" prefWidth="141.0" text="Main Menu" />
+      <Button fx:id="btnMain" layoutX="217.0" layoutY="361.0" mnemonicParsing="false" onAction="#btnMainClick" prefHeight="25.0" prefWidth="141.0" text="Main Menu" />
       <TabPane layoutX="23.0" layoutY="48.0" prefHeight="304.0" prefWidth="530.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
             <Tab text="General">
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <TableView fx:id="tblGeneral" prefHeight="275.0" prefWidth="530.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <TableView fx:id="tblGeneral" onSort="#btnMainClick" prefHeight="275.0" prefWidth="530.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                           <columns>
                             <TableColumn prefWidth="75.0" text="RANK" />
                             <TableColumn prefWidth="75.0" text="NAME" />
