--- a/app/src/main/java/scale_legends/Main.fxml
+++ b/app/src/main/java/scale_legends/Main.fxml
@@ -3,11 +3,11 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="574.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scale_legends.SceneController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="574.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scale_legends.MainSceneController">
    <children>
-      <Button fx:id="btnNewGame" layoutX="217.0" layoutY="133.0" mnemonicParsing="false" onAction="#switchToNewGameScene" prefHeight="25.0" prefWidth="141.0" text="New Game" />
-      <Button fx:id="btnOptions" layoutX="217.0" layoutY="207.0" mnemonicParsing="false" onAction="#switchToOptionsScene" prefHeight="25.0" prefWidth="141.0" text="Options" />
-      <Button fx:id="btnLeaderboard" layoutX="217.0" layoutY="170.0" mnemonicParsing="false" onAction="#switchToLeaderboardScene" prefHeight="25.0" prefWidth="141.0" text="Leaderboard" />
-      <Button fx:id="btnExit" layoutX="217.0" layoutY="242.0" mnemonicParsing="false" onAction="#switchToLoginScene" prefHeight="25.0" prefWidth="141.0" text="Exit Game" />
+      <Button fx:id="btnNewGame" layoutX="217.0" layoutY="133.0" mnemonicParsing="false" onAction="#btnNewGameClick" prefHeight="25.0" prefWidth="141.0" text="New Game" />
+      <Button fx:id="btnOptions" layoutX="217.0" layoutY="207.0" mnemonicParsing="false" onAction="#btnOptionsClick" prefHeight="25.0" prefWidth="141.0" text="Options" />
+      <Button fx:id="btnLeaderboard" layoutX="217.0" layoutY="170.0" mnemonicParsing="false" onAction="#btnLeaderboardClick" prefHeight="25.0" prefWidth="141.0" text="Leaderboard" />
+      <Button fx:id="btnExit" layoutX="217.0" layoutY="242.0" mnemonicParsing="false" onAction="#btnExitClick" prefHeight="25.0" prefWidth="141.0" text="Exit Game" />
    </children>
 </AnchorPane>
