--- a/app/src/main/java/scale_legends/assets/NewGame.fxml
+++ b/app/src/main/java/scale_legends/assets/NewGame.fxml
@@ -6,10 +6,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="574.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scale_legends.NewGameSceneController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scale_legends.NewGameSceneController">
    <children>
-      <ListView layoutX="30.0" layoutY="50.0" prefHeight="289.0" prefWidth="516.0" />
-      <Button fx:id="btnPlay" layoutX="303.0" layoutY="355.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="141.0" text="Play" />
+      <ListView fx:id="listGamemodes" layoutX="30.0" layoutY="50.0" prefHeight="289.0" prefWidth="516.0" />
+      <Button fx:id="btnPlay" layoutX="303.0" layoutY="355.0" mnemonicParsing="false" onAction="#btnPlayClick" prefHeight="25.0" prefWidth="141.0" text="Play" />
       <Button fx:id="btnMain" layoutX="130.0" layoutY="355.0" mnemonicParsing="false" onAction="#btnMainClick" prefHeight="25.0" prefWidth="141.0" text="Main Menu" />
       <Label layoutX="165.0" layoutY="4.0" text="CHOSE A GAME MODE">
          <font>
