--- a/app/src/main/java/scale_legends/assets/PlayGame.fxml
+++ b/app/src/main/java/scale_legends/assets/PlayGame.fxml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.canvas.Canvas?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane fx:id="pnMainpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scale_legends.PlayGameSceneController">
    <children>
       <Canvas fx:id="cnvCanvas" height="500.0" width="650.0" />
+      <Button fx:id="butBack" layoutX="486.0" layoutY="7.0" mnemonicParsing="false" onAction="#btnBackClick" prefHeight="38.0" prefWidth="157.0" text="Back" translateZ="1.0" />
    </children>
 </AnchorPane>
